# robotframework-appiumlibrary

./: .gitignore  .travis.yml  BUILD.rst  CHANGES.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  a_test  dev_requirements.txt  index.html  params.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_require.txt  update_appium_tool.py
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml  unit-tests.yml
AppiumLibrary/: __init__.py  version.py
AppiumLibrary/keywords/: __init__.py  _android_utils.py  _applicationmanagement.py  _element.py  _keyevent.py  _logging.py  _runonfailure.py  _screenrecord.py  _screenshot.py  _touch.py  _waiting.py  keywordgroup.py
AppiumLibrary/locators/: __init__.py  elementfinder.py
AppiumLibrary/utils/: __init__.py  applicationcache.py  selfhealing.py
demo/: OrangeDemoApp.html  demo_resoure.txt  test_andriod_demo.txt  test_android_contact_resource.txt  test_android_contacts.txt  test_demo.txt  test_ios_demo.txt
demo/demoapp/: OrangeDemoApp.apk
doc/: AppimuAndroidLibrary.html  AppimuLibrary.html  AppiumLibrary.html
docs/: AppiumLibrary-2.1.0.rst  AppiumLibrary.html
sample-code/: android_basic_interactions.test.robot  android_create_session.test.robot  android_create_web_session.test.robot  android_selectors.test.robot  android_simple_example.test.robot  ios_basic_interactions.test.robot  ios_create_session.test.robot  ios_create_web_session.test.robot  ios_selectors.test.robot  resource.robot
src/: version.py
src/AppiumAndroidLibrary/: __init__.py
src/AppiumAndroidLibrary/keywords/: _element.py  (+1 more)
src/AppiumLibrary/: __init__.py  version.py
src/keywords/: __init__.py  _applicationmanagement.py  _element.py  _runonfailure.py  keywordgroup.py
tests/keywords/: test_androidUtils.py  test_applicationmanagement.py  test_keyevent.py  test_multipleAppiumConnections.py  test_runonfailure.py  test_screenrecord.py  test_screenshot.py  test_waiting.py  webdriverremotemock.py
tests/locators/: test_elementfinder.py
tests/unit/: kitchen_bytes.py
tests/utils/: test_applicationcache.py
(+17 files in other folders)
